ch2/network-allow-policy.yaml
---
kind: NetworkPolicy 
apiVersion: extensions/v1beta1 
metadata: 
  name: access-nginx 
  namespace: calico-policy-nginx 
spec: 
  podSelector: 
    matchLabels: 
      run: nginx 
  ingress: 
    - from: 
      - podSelector: 
          matchLabels: {}
