ch2/network-policy.yaml
---
apiVersion: extensions/v1beta1 
kind: NetworkPolicy 
metadata:  
  name: default-deny 
  namespace: calico-policy-nginx 
spec:  
  podSelector: {}
